added ability to add and remove components(todos)

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 20px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .site{
+    position: fixed;
+      top: 20px;
+      margin: auto
   }
-}
+  
+  
+  input[type=submit] {
+      padding:15px 50px;
+      width:auto;
+      background:#1abc9c;
+      border:none;
+      color:white;
+      cursor:pointer;
+      display:inline-block;
+      float:right;
+      clear:right;
+      -webkit-transition:0.2s ease all;
+         -moz-transition:0.2s ease all;
+          -ms-transition:0.2s ease all;
+           -o-transition:0.2s ease all;
+              transition:0.2s ease all;
+  }
+  
+  input[type=submit]:hover {
+      opacity:0.8;
+  }
+  
+  input[type="submit"]:active {
+      opacity:0.4;
+  }
